# cecelia

./: .Rprofile  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  FAQ.md  INVENTORY.md  LICENSE  NAMESPACE  README.Rmd  README.md  THIRD_PARTY.md  app.py  install.ps1  install.sh  pixi.toml
.github/: PULL_REQUEST_TEMPLATE.md
R/: anndataUtils.R  cciaHelpers.R  cciaImage.R  cciaImageCollection.R  cciaImageSet.R  dockerHelpers.R  flowGatingSet.R  flowHelpers.R  forkedTasks.R  imagejUtils.R  jupyterKernelUtils.R  magickHelpers.R  multifileLabelPopUtils.R  napariUtils.R  plotHelpers.R  populationUtils.R  reactiveObject.R  reactivePersistentObject.R  reactivePersistentObjectCollection.R  reactivePersistentObjectSet.R  sshUtils.R  taskCore.R  taskLauncher.R  (+4 more)
python/: pyproject.toml
python/cecelia/tasks/cleanupImages/: af_correct_run.py  cellpose_correct_run.py  drift_correct_run.py
python/cecelia/tasks/clustPops/: cluster_run.py
python/cecelia/tasks/clustRegions/: cluster_run.py
python/cecelia/tasks/clustTracks/: cluster_run.py
python/cecelia/tasks/editImages/: cropImage_run.py
python/cecelia/tasks/importImages/: convert_centroid_names.py  convert_centroid_names_run.py  legacy_migrate.py  migrate_legacy_run.py  read_imagej_physical_size_run.py  rescale_to_8bit_run.py  scan_legacy_run.py
python/cecelia/tasks/segment/: cellpose_run.py  measure_labels_run.py
python/cecelia/tasks/spatialAnalysis/: cell_aggregates_mesh_run.py  cell_neighbours_run.py
python/cecelia/tasks/tracking/: bayesian_tracking_run.py  track_props_run.py
python/cecelia/tests/: test_centroid_migrate.py  test_clustering_batch.py  test_clustering_utils.py  test_correction_utils.py  test_crop_image.py  test_gpu_utils.py  test_image_readers.py  test_intensity_utils.py  test_label_props_utils.py  test_legacy_migrate.py  test_napari_utils.py  test_package_data.py  test_segmentation_streaming.py  test_segmentation_utils.py  test_spatial_utils.py  test_title_card.py  test_zarr_store.py
python/cecelia/utils/: cellpose_utils.py  centroid_migrate.py  clustering_utils.py  convert_centroid_names.py  correction_utils.py  dim_utils.py  gpu_utils.py  intensity_utils.py  label_props_utils.py  legacy_migrate.py  measure_utils.py  mesh_utils.py  napari_utils.py  obs_utils.py  ome_xml_utils.py  rechunk_zarr.py  segmentation_utils.py  slice_utils.py  spatial_utils.py  title_card.py  tracking_utils.py  zarr_utils.py
python/cecelia/writers/: write_categorical_obs_run.py
(+2085 files in other folders)
